# benchmarks

./: .dockerignore  .gitignore  .gitmodules  .rubocop.yml  Directory.Build.props  Dockerfile  LICENSE  Makefile  README.md  analyze.rb  repeat.rb  run.sh  versions.rb  xtime.rb
base64/: .gitignore  Base64Java.java  Makefile  README.md  Test.kt  base64.csproj  build.sh  clean.sh  go.mod  go.sum  project.json  run.sh  test-aklomp.c  test-base64x.go  test-crypto.cpp  test-nolib.c  test-xs.pl  test.c  test.cpp  test.cr  test.cs  test.d  test.go  test.jl  test.js  test.ml  test.nim  test.php  test.pl  test.py  test.rb  test.rkt  test.rs  test.scala  test.tcl  test.v  test.vala  test.zig
base64/base64.fsharp/: base64.fs  base64.fsproj
base64/base64.rs/: Cargo.toml
base64/go/: benchmark.go  go.mod  go.sum
brainfuck/: Makefile  README.md  bench.b  bf-marray.hs  bf-staged.cs  bf-staged.rkt  bf-staged.scala  bf-syntax.rkt  bf.c  bf.cpp  bf.cr  bf.cs  bf.d  bf.ex  bf.fs  bf.go  bf.hs  bf.idr  bf.java  bf.jl  bf.js  bf.lua  bf.ml  bf.nim  bf.php  bf.pl  bf.rb  bf.rkt  bf.rs  bf.scala  bf.sml  bf.ss  bf.swift  bf.tcl  bf.v  bf.vala  bf.zig  bf2.kt  bf3.py  bf_jit.lua  (+27 more)
brainfuck2/: .gitignore  1.b  2.b  Makefile  README.md  bf-marray.hs  bf-vector.hs  bf.c  bf.cpp  bf.cr  bf.cs  bf.d  bf.d8.js  bf.ex  bf.exs  bf.fs  bf.go  bf.hs  bf.java  bf.jl  bf.js  bf.lua  bf.ml  bf.nim  bf.pl  bf.py  bf.rb  bf.rkt  bf.rs  bf.scala  bf.sml  bf.ss  bf.tcl  bf.v  bf.vala  bf2.kt  bf3.py  bf_func.go  bf_oo.tcl  brainfuck2.csproj  (+8 more)
common/: commands.mk
docker/: Dockerfile  Dockerfile.alpine  apt.pkgs  run.rb  update_apt.rb  versions.rb
havlak/: .gitignore  Makefile  README.md  build.sh  clean.sh  havlak.cpp  havlak.cr  havlak.cs  havlak.d  havlak.go  havlak.nim  havlak.py  havlak.scala  project.json  run.sh
json/: .gitignore  Makefile  README.md  build.sh  clean.sh  gen.rb  generate_json.rb  go.mod  go.sum  json.csproj  project.json  run-ruby.sh  run.sh  test-xs.pl  test-yajl.rb  test.c3  test.clj  test.cpp  test.cr  test.cs  test.d  test.go  test.hs  test.jl  test.js  test.nim  test.odin  test.php  test.pl  test.py  test.q  test.rb  test.rkt  test.rs  test.scala  test.v  test.vala  test.zig  test2.cr  test_boost.cpp  (+28 more)
json/json-hs/: LICENSE  Makefile  json-hs.cabal  stack.yaml
json/json-hs/src/: Main.hs
json/json.rs/: Cargo.toml  build.rs
json/json.rs/src/: json_jq.rs  json_pull.rs  json_struct.rs  json_value.rs  lib.rs  main.rs  serde_types_pull.in.rs  serde_types_struct.in.rs
matmul/: .gitignore  Directory.Build.props  Makefile  README.md  build.sh  clean.sh  matmul-native.jl  matmul-numpy.py  matmul-vsl.v  matmul.c  matmul.cpp  matmul.cr  matmul.cs  matmul.csproj  matmul.d  matmul.go  matmul.java  matmul.jl  matmul.js  matmul.kt  matmul.nim  matmul.pl  matmul.py  matmul.rb  matmul.rs  matmul.scala  matmul.swift  matmul.tcl  matmul.v  matmul.vala  matmul.zig  matmul_arraymancer.nim  matmul_d_lubeck.d  matmul_d_mir.d  matmul_mir.d  matmulnd4j.java  matmulswift.swift  project.json  run-ruby.sh  run.sh
matmul/rust-ndarray/: Cargo.toml
matmul/rust-ndarray/src/: main.rs
perlin/: Cargo.toml  README.md  build.sh  clean.sh  run.sh  test.c  test.cr  test.cs  test.d  test.go  test.java  test.jl  test.nim  test.py  test.rs
primes/: Makefile  Primes.java  primes.cpp  primes.cr  primes.jl  primes.js  primes.lua  primes.nim  primes.py  primes.rb  primes.rkt  primes.rs  primes.scala  primes.v  primes.zig  primes_jit.lua
(+68 files in other folders)
