[package]
name = "json-rs"
version = "0.0.1"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
serde_json = "1.0.142"
jq-rs = "0.4.1"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.utils]
path = "../../common/rust"

[[bin]]
name = "json-value-rs"
path = "src/json_value.rs"

[[bin]]
name = "json-struct-rs"
path = "src/json_struct.rs"

[[bin]]
name = "json-pull-rs"
path = "src/json_pull.rs"

[[bin]]
name = "json-jq-rs"
path = "src/json_jq.rs"
